--- a/package.yaml
+++ b/package.yaml
@@ -16,44 +16,66 @@ copyright:           "2020 Author name here"
 description:         Please see the README on GitHub at <https://github.com/githubuser/spaceminer#readme>
 
 dependencies:
-- base >= 4.7 && < 5
+# the usual suspects
+- base
 - bytestring
-- JuicyPixels
+- text
+- unix
+
+# formatting
+- ormolu
+
+# more odd ones
+- file-embed
 - bmp
-- protolude
+
+# opengl and friends
+- JuicyPixels
 - gloss
 - gloss-rendering
 - GLFW-b
-- Euterpea
+
+# maybe game dev relevant
 - pathfinding
-- file-embed
-- unix
-- ormolu
+
+# music generation
+- Euterpea
 
 default-extensions:
+- DeriveAnyClass
+- DeriveGeneric
+- DerivingStrategies
+- FlexibleInstances
+- GeneralizedNewtypeDeriving
+- MultiParamTypeClasses
+- NamedFieldPuns
+- NoImplicitPrelude
+- OverloadedStrings
+- PackageImports
+- RecordWildCards
+- ScopedTypeVariables
+- StandaloneDeriving
 - TemplateHaskell
+- TupleSections
+- TypeApplications
+- TypeOperators
+- ViewPatterns
 
 library:
   source-dirs: lib
 
+ghc-options: -O0 -j -Wall -Werror
+
 executables:
   spaceminer:
-    main:                Main.hs
-    source-dirs:         exe
-    ghc-options:
-    - -threaded
-    - -rtsopts
-    - -with-rtsopts=-N
-    dependencies:
-    - spaceminer
+    main: Main.hs
+    source-dirs: exe
+    ghc-options: -threaded -rtsopts -with-rtsopts=-N
+    dependencies: spaceminer
 
 tests:
   spaceminer-test:
-    main:                Spec.hs
-    source-dirs:         test
-    ghc-options:
-    - -threaded
-    - -rtsopts
-    - -with-rtsopts=-N
-    dependencies:
-    - spaceminer
+    main: Spec.hs
+    source-dirs: test
+    ghc-options: -threaded -rtsopts -with-rtsopts=-N
+    dependencies: spaceminer
