transpose event handling for less code

--- a/package.yaml
+++ b/package.yaml
@@ -49,6 +49,7 @@ default-extensions:
 - DerivingStrategies
 - FlexibleInstances
 - GeneralizedNewtypeDeriving
+- LambdaCase
 - MultiParamTypeClasses
 - NamedFieldPuns
 - NoImplicitPrelude
