rough removal of gloss dependency to try to make rendering speed viable

--- a/package.yaml
+++ b/package.yaml
@@ -32,9 +32,9 @@ dependencies:
 - ormolu
 
 # opengl and friends
+- OpenGL
+- GLUT
 - JuicyPixels
-- gloss
-- gloss-rendering
 - GLFW-b
 
 # maybe game dev relevant
