migrate to JuciyPixels for png loading (yay), support transparency, fix wrong coordinates left over from gloss now that png loading is fixed

--- a/package.yaml
+++ b/package.yaml
@@ -22,11 +22,13 @@ dependencies:
 - bytestring
 - containers
 - file-embed
+- filepath
 - integer-gmp
 - safe
 - text
 - time
 - unix
+- vector
 - vty
 
 # extra
