--- a/package.yaml
+++ b/package.yaml
@@ -1,10 +1,9 @@
-name:                spaceminer
+name:                playtime
 version:             0.1.0.0
-github:              "githubuser/spaceminer"
-license:             BSD3
-author:              "Author name here"
-maintainer:          "example@example.com"
-copyright:           "2020 Author name here"
+github:              "githubuser/playtime"
+author:              "Chris Vogt"
+maintainer:          ""
+copyright:           "2020 Chris Vogt"
 
 # Metadata used when publishing your package
 # synopsis:            Short description of your package
@@ -13,7 +12,7 @@ copyright:           "2020 Author name here"
 # To avoid duplicated efforts in documentation and dealing with the
 # complications of embedding Haddock markup inside cabal files, it is
 # common to point users to the README.md file.
-description:         Please see the README on GitHub at <https://github.com/githubuser/spaceminer#readme>
+description:         Please see the README on GitHub at ...
 
 dependencies:
 # - ansi-terminal
@@ -86,13 +85,13 @@ ghc-options:
 executables:
   spaceminer:
     main: Main.hs
-    source-dirs: exe
+    source-dirs: spaceminer
     ghc-options: -threaded -rtsopts -with-rtsopts=-N
-    dependencies: spaceminer
+    dependencies: playtime
 
 tests:
-  spaceminer-test:
+  playtime-test:
     main: Spec.hs
     source-dirs: test
     ghc-options: -threaded -rtsopts -with-rtsopts=-N
-    dependencies: spaceminer
+    dependencies: playtime
