--- a/package.yaml
+++ b/package.yaml
@@ -84,7 +84,7 @@ ghc-options:
 
 executables:
   spaceminer:
-    main: Main.hs
+    main: SpaceMiner/Main.hs
     source-dirs: spaceminer
     ghc-options: -threaded -rtsopts -with-rtsopts=-N
     dependencies: playtime
