--- a/package.yaml
+++ b/package.yaml
@@ -88,6 +88,11 @@ executables:
     source-dirs: spaceminer
     ghc-options: -threaded -rtsopts -with-rtsopts=-N
     dependencies: playtime
+  platformer:
+    main: Main.hs
+    source-dirs: platformer
+    ghc-options: -threaded -rtsopts -with-rtsopts=-N
+    dependencies: playtime
 
 tests:
   playtime-test:
