--- a/package.yaml
+++ b/package.yaml
@@ -115,6 +115,11 @@ executables:
     source-dirs: shoot-em-up
     ghc-options: -threaded -rtsopts -with-rtsopts=-N
     dependencies: playtime
+  live-coding-demo:
+    main: Main.hs
+    source-dirs: live-coding-demo
+    ghc-options: -threaded -rtsopts -with-rtsopts=-N
+    dependencies: playtime
 
 tests:
   playtime-test:
