ghc flags: don't error on harmless warnings.
GHC detecting unused cruft should never be an error.

--- a/package.yaml
+++ b/package.yaml
@@ -101,6 +101,8 @@ ghc-options:
   -Wno-unsafe
   -Wno-missing-deriving-strategies
   -Wno-monomorphism-restriction
+  -Wno-error=unused-local-binds
+  -Wno-error=unused-imports
   # -optP-Wno-nonportable-include-path
 
 executables:
