--- a/package.yaml
+++ b/package.yaml
@@ -113,6 +113,11 @@ executables:
     source-dirs: spaceminer
     ghc-options: -threaded -rtsopts -with-rtsopts=-N
     dependencies: playtime
+  multispace:
+    main: Main.hs
+    source-dirs: multispace
+    ghc-options: -threaded -rtsopts -with-rtsopts=-N
+    dependencies: playtime
   platformer:
     main: Main.hs
     source-dirs: platformer
