--- a/stack.yaml
+++ b/stack.yaml
@@ -17,7 +17,7 @@
 #
 # resolver: ./custom-snapshot.yaml
 # resolver: https://example.com/snapshots/2018-01-01.yaml
-resolver: lts-16.1
+resolver: lts-19.0
 
 # User packages to be built.
 # Various formats can be used as shown in the example below.
@@ -50,8 +50,8 @@ extra-deps:
 - lazysmallcheck-0.6
 #-----------
 - pathfinding-0.1.0.0
-#-----------
 - network-run-0.2.4
+- sdl2-mixer-1.2.0.0
 
 allow-newer: true
 
