fix GLFW on M1 macs

--- a/stack.yaml
+++ b/stack.yaml
@@ -34,7 +34,6 @@ packages:
 # These entries can reference officially published versions as well as
 # forks / in-progress versions pinned to a git hash. For example:
 #
-# extra-deps:
 # - acme-missiles-0.3
 # - git: https://github.com/commercialhaskell/stack.git
 #   commit: e7b331f14bcffb8367cd58fbfc8b40ec7642100a
@@ -42,6 +41,8 @@ packages:
 # extra-deps: []
 
 extra-deps:
+- git: https://github.com/m-matth/bindings-GLFW.git
+  commit: 46ed988b44c1354c810a6e63e1cdca8b206c3791
 - Euterpea-2.0.7
 # Euterpea deps
 - PortMidi-0.2.0.0
