--- a/package.yaml
+++ b/package.yaml
@@ -55,9 +55,6 @@ dependencies:
 - monad-loops
 - universum
 
-# formatting
-- ormolu
-
 # opengl and friends
 - OpenGL
 - JuicyPixels
@@ -140,6 +137,13 @@ executables:
     source-dirs: live-coding-demo
     ghc-options: -threaded -rtsopts -with-rtsopts=-N
     dependencies: playtime
+  format:
+    main: Main.hs
+    source-dirs: format
+    ghc-options: -threaded -rtsopts -with-rtsopts=-N
+    dependencies:
+      - playtime
+      - ormolu
 
 tests:
   playtime-test:
